--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -6,176 +6,50 @@ license = 'Apache 2.0'
 name = 'node-polkadex-runtime'
 repository = 'https://github.com/Polkadex-Substrate/Polkadex'
 version = '2.0.0'
-#
-[dependencies]
-runtime-api = { default-features = false, path = "../pallets/polkadex/runtime-api" }
 
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
+
+[dependencies]
+runtime-api = { default-features = false, path = "../pallets/polkadex/runtime-api" }
+polkadex = { default-features = false, package = 'pallet-polkadex', path = '../pallets/polkadex', version = '2.0.0' }
+frame-executive = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-arithmetic = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-staking = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-staking-reward-curve = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-session = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false, features = ['historical'] }
+sp-staking = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-generic-asset = { default-features = false, git = 'https://github.com/Gauthamastro/generic_asset.git', branch = "master" }
+serde = { features = ['derive'], optional = true, version = '1.0.101' }
 
 [dependencies.codec]
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
 version = '1.3.4'
-
-[dependencies.frame-executive]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-arithmetic]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.frame-support]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.frame-system]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.frame-system-rpc-runtime-api]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-babe]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-balances]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-grandpa]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-randomness-collective-flip]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-sudo]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-timestamp]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-transaction-payment]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-transaction-payment-rpc-runtime-api]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.serde]
-features = ['derive']
-optional = true
-version = '1.0.101'
-
-[dependencies.sp-api]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-block-builder]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-consensus-babe]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '0.8.0'
-
-[dependencies.sp-core]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-inherents]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-offchain]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-runtime]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-session]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-std]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-transaction-pool]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.sp-version]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-
-[dependencies.pallet-staking]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-staking-reward-curve]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-session]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-features = ['historical']
-
-[dependencies.sp-staking]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-version = '2.0.0'
-
-[dependencies.pallet-generic-asset]
-default-features = false
-git = 'https://github.com/Gauthamastro/generic_asset.git'
-
-[dependencies.polkadex]
-default-features = false
-package = 'pallet-polkadex'
-path = '../pallets/polkadex'
-version = '2.0.0'
 
 [features]
 default = ['std']
@@ -213,4 +87,4 @@ std = [
 ]
 
 [build-dependencies]
-wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '2.0.0' }
+substrate-wasm-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
