--- a/node/mainnet/Cargo.toml
+++ b/node/mainnet/Cargo.toml
@@ -5,7 +5,7 @@ description = 'Polkadex: Orderbook based Decentralized Chain'
 edition = '2018'
 homepage = 'https://github.com/Polkadex-Substrate/Polkadex'
 license = 'Apache 2.0'
-name = 'node-polkadex'
+name = 'polkadex-mainnet'
 repository = 'https://github.com/Polkadex-Substrate/Polkadex'
 version = "2.0.0"
 
@@ -13,14 +13,14 @@ version = "2.0.0"
 targets = ['x86_64-unknown-linux-gnu']
 
 [[bin]]
-name = 'node-polkadex'
+name = 'polkadex-mainnet'
 
 [dependencies]
 jsonrpc-core = '15.0.0'
 structopt = '0.3.8'
-rpc = { path = "../pallets/polkadex/rpc", version = "0.1.0" }
-runtime-api = { path = "../pallets/polkadex/runtime-api", version = "0.1.0" }
-node-polkadex-runtime = { path = "../runtime", version = "2.0.0" }
+rpc = { path = "../../pallets/polkadex/rpc", version = "0.1.0" }
+runtime-api = { path = "../../pallets/polkadex/runtime-api", version = "0.1.0" }
+polkadex-mainnet-runtime = { path = "../../runtime/mainnet", version = "2.0.0" }
 pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
