--- a/runtime/mainnet/Cargo.toml
+++ b/runtime/mainnet/Cargo.toml
@@ -3,7 +3,7 @@ authors = ['Polkadex Team ']
 edition = '2018'
 homepage = 'https://github.com/Polkadex-Substrate/Polkadex'
 license = 'Apache 2.0'
-name = 'node-polkadex-runtime'
+name = 'polkadex-mainnet-runtime'
 repository = 'https://github.com/Polkadex-Substrate/Polkadex'
 version = '2.0.0'
 
@@ -12,8 +12,8 @@ version = '2.0.0'
 targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
-runtime-api = { default-features = false, path = "../pallets/polkadex/runtime-api" }
-polkadex = { default-features = false, package = 'pallet-polkadex', path = '../pallets/polkadex', version = '2.0.0' }
+runtime-api = { default-features = false, path = "../../pallets/polkadex/runtime-api" }
+polkadex = { default-features = false, package = 'pallet-polkadex', path = '../../pallets/polkadex', version = '2.0.0' }
 frame-executive = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 sp-arithmetic = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
