--- a/node/testnet/Cargo.toml
+++ b/node/testnet/Cargo.toml
@@ -17,7 +17,7 @@ name = 'polkadex-testnet'
 targets = ['x86_64-unknown-linux-gnu']
 
 [build-dependencies]
-substrate-build-script-utils = '2.0.0'
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [dependencies]
 jsonrpc-core = '15.0.0'
@@ -28,31 +28,31 @@ polkadex-testnet-runtime = { path = '../../runtime/testnet', version = '2.0.0' }
 runtime-api = { default-features = false, path = "../../pallets/polkadex/runtime-api" }
 rpc = { path = "../../pallets/polkadex/rpc" }
 # Substrate dependencies
-frame-benchmarking = '2.0.0'
-frame-benchmarking-cli = '2.0.0'
-pallet-transaction-payment-rpc = '2.0.0'
-sc-basic-authorship = '0.8.0'
-sc-cli = { features = ['wasmtime'], version = '0.8.0' }
-sc-client-api = '2.0.0'
-sc-consensus = '0.8.0'
-sc-consensus-aura = '0.8.0'
-sc-executor = { features = ['wasmtime'], version = '0.8.0' }
-sc-finality-grandpa = '0.8.0'
-sc-rpc = '2.0.0'
-sc-rpc-api = '0.8.0'
-sc-service = { features = ['wasmtime'], version = '0.8.0' }
-sc-transaction-pool = '2.0.0'
-sp-api = '2.0.0'
-sp-block-builder = '2.0.0'
-sp-blockchain = '2.0.0'
-sp-consensus = '0.8.0'
-sp-consensus-aura = '0.8.0'
-sp-core = '2.0.0'
-sp-finality-grandpa = '2.0.0'
-sp-inherents = '2.0.0'
-sp-runtime = '2.0.0'
-sp-transaction-pool = '2.0.0'
-substrate-frame-rpc-system = '2.0.0'
+frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-cli = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-executor = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "master"  }
+sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-service = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 
 [features]
 default = []
