--- a/runtime/testnet/Cargo.toml
+++ b/runtime/testnet/Cargo.toml
@@ -10,8 +10,6 @@ version = '2.0.0'
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[build-dependencies]
-wasm-builder-runner = { package = 'substrate-wasm-builder-runner', version = '2.0.0' }
 
 # alias "parity-scale-code" to "codec"
 [dependencies.codec]
@@ -20,43 +18,43 @@ features = ['derive']
 package = 'parity-scale-codec'
 version = '1.3.4'
 
-[dependencies.pallet-generic-asset]
-default-features = false
-git = 'https://github.com/Gauthamastro/generic_asset.git'
-
 [dependencies]
 hex-literal = { optional = true, version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.101' }
 # local dependencies
 runtime-api = { default-features = false, path = "../../pallets/polkadex/runtime-api" }
 pallet-polkadex = { path = '../../pallets/polkadex', default-features = false, version = '2.0.0' }
+pallet-generic-asset = { default-features = false, git = 'https://github.com/Gauthamastro/generic_asset.git', branch = "master" }
 
 # Substrate dependencies
-frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
-frame-executive = { default-features = false, version = '2.0.0' }
-frame-support = { default-features = false, version = '2.0.0' }
-frame-system = { default-features = false, version = '2.0.0' }
-frame-system-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
-frame-system-rpc-runtime-api = { default-features = false, version = '2.0.0' }
-pallet-aura = { default-features = false, version = '2.0.0' }
-pallet-balances = { default-features = false, version = '2.0.0' }
-pallet-grandpa = { default-features = false, version = '2.0.0' }
-pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
-pallet-sudo = { default-features = false, version = '2.0.0' }
-pallet-timestamp = { default-features = false, version = '2.0.0' }
-pallet-transaction-payment = { default-features = false, version = '2.0.0' }
-pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '2.0.0' }
-sp-api = { default-features = false, version = '2.0.0' }
-sp-block-builder = { default-features = false, version = '2.0.0' }
-sp-consensus-aura = { default-features = false, version = '0.8.0' }
-sp-core = { default-features = false, version = '2.0.0' }
-sp-inherents = { default-features = false, version = '2.0.0' }
-sp-offchain = { default-features = false, version = '2.0.0' }
-sp-runtime = { default-features = false, version = '2.0.0' }
-sp-session = { default-features = false, version = '2.0.0' }
-sp-std = { default-features = false, version = '2.0.0' }
-sp-transaction-pool = { default-features = false, version = '2.0.0' }
-sp-version = { default-features = false, version = '2.0.0' }
+frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false, optional = true }
+frame-executive = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false, optional = true }
+frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+
+[build-dependencies]
+substrate-wasm-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 [features]
 default = ['std']
