added github actions 2

--- a/.github/workflows/package-test.yml
+++ b/.github/workflows/package-test.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master, develop ]
   pull_request:
-    branches: [ master, develop ]
+    branches: [ master, develop, feature/34-updated-polkadex ]
 
 env:
   CARGO_TERM_COLOR: always
