--- a/.github/workflows/check-health-daily.yml
+++ b/.github/workflows/check-health-daily.yml
@@ -2,7 +2,7 @@ name: Check Health of Polkadex
 
 on:
   schedule:
-    - cron: "* * * * *"
+    - cron: '* * * * *'
 
 env:
   CARGO_TERM_COLOR: always
