--- a/.github/workflows/check-health-daily.yml
+++ b/.github/workflows/check-health-daily.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         curl --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/issues \
-        --header 'authorization: Bearer ${{ secrets.POLKADEX }}' \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
         --header 'content-type: application/json' \
         --data '{
           "title": "Automated issue for commit: ${{ github.sha }}",
