--- a/.github/workflows/check-health-daily.yml
+++ b/.github/workflows/check-health-daily.yml
@@ -24,12 +24,13 @@ jobs:
           override: true
           components: rustfmt, clippy
     - name: Create issue using REST API
+      if: failure()
       run: |
         curl --request POST \
         --url https://api.github.com/repos/${{ github.repository }}/issues \
-        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'authorization: Bearer ${{ secrets.POLKADEX }}' \
         --header 'content-type: application/json' \
         --data '{
-          "title": "Automated issue for commit: ${{ github.sha }}",
-          "body": "This issue was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+          "title": "Build failing",
+          "body": "Polkadex build is failing. Please look into it."
           }'
