--- a/.github/workflows/check-health-daily.yml
+++ b/.github/workflows/check-health-daily.yml
@@ -1,10 +1,8 @@
 name: Check Health of Polkadex
 
 on:
-  push:
-    branches: [ master, develop, feature/44-action-implementation ]
-  pull_request:
-    branches: [ master, develop ]
+  schedule:
+    - cron: '0 4 * * *'
 
 env:
   CARGO_TERM_COLOR: always
