--- a/bin/polkadex/Cargo.toml
+++ b/bin/polkadex/Cargo.toml
@@ -6,13 +6,31 @@ name = 'polkadex'
 version = '2.0.0'
 
 [dependencies]
+polkadex-mainnet = { path = "../../node/mainnet", optional = true }
 polkadex-mainnet-runtime = { path = "../../runtime/mainnet", optional = true }
+polkadex-testnet = { path = "../../node/testnet", optional = true }
 polkadex-testnet-runtime = { path = "../../runtime/testnet", optional = true }
+pallet-polkadex = { path = "../../pallets/polkadex", optional = true }
+polkadex-engine = { path = "../../pallets/polkadex-engine", optional = true }
+polkadex-custom-assets = { path = "../../pallets/polkadex-custom-assets", optional = true }
+pallet-idenity = { path = "../../pallets/polkadex-identity-pallet", optional = true }
+polkadex-swap-engine = { path = "../../pallets/polkadex-uniswap", optional = true }
 
 [features]
+common = [
+    "pallet-polkadex",
+    "polkadex-engine",
+    "polkadex-custom-assets",
+    "pallet-idenity",
+    "polkadex-swap-engine",
+]
 mainnet = [
+    "common",
+    "polkadex-mainnet",
     "polkadex-mainnet-runtime",
 ]
 testnet  = [
+    "common",
+    "polkadex-testnet",
     "polkadex-testnet-runtime",
 ]
