--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     'node/testnet',
     'runtime/mainnet',
     'runtime/testnet',
+    'pallets/generic_asset',
     'pallets/polkadex',
     'pallets/polkadex-engine',
     'pallets/polkadex-custom-assets',
