--- a/runtime/testnet/Cargo.toml
+++ b/runtime/testnet/Cargo.toml
@@ -37,14 +37,14 @@ frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git
 frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
-pallet-collective = { version = "2.0.0", default-features = false }
+pallet-collective = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
-pallet-treasury = { version = "2.0.0", default-features = false }
+pallet-treasury = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 sp-consensus-aura = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
