--- a/runtime/testnet/Cargo.toml
+++ b/runtime/testnet/Cargo.toml
@@ -37,6 +37,7 @@ frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git
 frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-aura = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
+pallet-bounties = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-collective = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
@@ -69,6 +70,7 @@ runtime-benchmarks = [
     'frame-system-benchmarking',
     'frame-system/runtime-benchmarks',
     'pallet-balances/runtime-benchmarks',
+    'pallet-bounties/runtime-benchmarks',
     'pallet-collective/runtime-benchmarks',
     'pallet-timestamp/runtime-benchmarks',
     'pallet-treasury/runtime-benchmarks',
@@ -83,6 +85,7 @@ std = [
     'frame-system-rpc-runtime-api/std',
     'pallet-aura/std',
     'pallet-balances/std',
+    'pallet-bounties/std',
     'pallet-collective/std',
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
