--- a/pallets/polkadex-engine/Cargo.toml
+++ b/pallets/polkadex-engine/Cargo.toml
@@ -30,6 +30,7 @@ sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "maste
 sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false }
 pallet-idenity = {default-features = false, path = "../polkadex-identity-pallet"}
+frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = "master", default-features = false, optional = true }
 
 [dependencies.codec]
 default-features = false
@@ -54,3 +55,5 @@ std = [
     'pallet-idenity/std',
     'pallet-randomness-collective-flip/std'
 ]
+
+runtime-benchmarks = ["frame-benchmarking"]
