--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -25,10 +25,10 @@ pallet-transaction-payment = { version = "3.0.0", default-features = false }
 frame-executive = { version = "3.0.0", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
 sp-api = { version = "3.0.0", default-features = false }
-sp-block-builder = { path = "../../../primitives/block-builder", default-features = false, version = "3.0.0"}
+sp-block-builder = { default-features = false, version = "3.0.0"}
 sp-consensus-aura = { version = "0.9.0", default-features = false }
 sp-core = { version = "3.0.0", default-features = false }
-sp-inherents = { path = "../../../primitives/inherents", default-features = false, version = "3.0.0"}
+sp-inherents = { default-features = false, version = "3.0.0"}
 sp-offchain = { version = "3.0.0", default-features = false }
 sp-runtime = { version = "3.0.0", default-features = false }
 sp-session = { version = "3.0.0", default-features = false }
@@ -45,10 +45,8 @@ frame-benchmarking = { version = "3.0.0", default-features = false, optional = t
 frame-system-benchmarking = { version = "3.0.0", default-features = false, optional = true }
 hex-literal = { version = "0.3.1", optional = true }
 
-template = { version = "2.0.0", default-features = false, path = "../pallets/template", package = "pallet-template" }
-
 [build-dependencies]
-substrate-wasm-builder = { version = "4.0.0", path = "../../../utils/wasm-builder" }
+substrate-wasm-builder = { version = "4.0.0"}
 
 [features]
 default = ["std"]
@@ -77,8 +75,7 @@ std = [
 	"sp-transaction-pool/std",
 	"sp-version/std",
 	"frame-system/std",
-	"frame-system-rpc-runtime-api/std",
-	"template/std",
+	"frame-system-rpc-runtime-api/std"
 ]
 runtime-benchmarks = [
 	"sp-runtime/runtime-benchmarks",
