--- a/pallets/Engine/Cargo.toml
+++ b/pallets/Engine/Cargo.toml
@@ -40,6 +40,11 @@ version = '3.0.0'
 default-features = false
 version = '3.0.0'
 
+[dependencies.frame-benchmarking]
+default-features = false
+version = '3.0.0'
+optional = true
+
 [package]
 authors = ['Anonymous']
 description = 'FRAME pallet template for defining custom runtime logic.'
@@ -53,3 +58,5 @@ version = '0.1.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
+
+runtime-benchmarks = ["frame-benchmarking"]
