--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -76,7 +76,8 @@ std = [
     "sp-transaction-pool/std",
     "sp-version/std",
     "frame-system/std",
-    "frame-system-rpc-runtime-api/std"
+    "frame-system-rpc-runtime-api/std",
+    "orderbook-engine/std"
 ]
 runtime-benchmarks = [
     "sp-runtime/runtime-benchmarks",
@@ -87,4 +88,5 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks",
     "pallet-timestamp/runtime-benchmarks",
+    "orderbook-engine/runtime-benchmarks",
 ]
