--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "node-template-runtime"
+name = "node-polkadex-runtime"
 version = "2.0.0"
 authors = ["Anonymous"]
 edition = "2018"
