--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -15,6 +15,7 @@ codec = { package = "parity-scale-codec", version = "2.0.0", default-features = 
 
 orderbook-engine = { path = "../pallets/Engine", version = "0.1.0", default-features = false }
 assets = { path = "../pallets/Assets", version = "0.1.0", default-features = false }
+chainbridge = { path = "../pallets/chainbridge", default-features = false }
 pallet-aura = { version = "3.0.0", default-features = false }
 pallet-balances = { version = "3.0.0", default-features = false }
 frame-support = { version = "3.0.0", default-features = false }
@@ -79,7 +80,8 @@ std = [
     "frame-system/std",
     "frame-system-rpc-runtime-api/std",
     "assets/std",
-    "orderbook-engine/std"
+    "orderbook-engine/std",
+    "chainbridge/std"
 ]
 runtime-benchmarks = [
     "sp-runtime/runtime-benchmarks",
