modified register pair function of polkapool

--- a/pallets/Polkapool/Cargo.toml
+++ b/pallets/Polkapool/Cargo.toml
@@ -22,7 +22,7 @@ frame-system = {   version = '3.0.0',default-features = false }
 sp-runtime = {   version = '3.0.0',default-features = false }
 sp-arithmetic = {   version = '3.0.0',default-features = false }
 sp-core = {   version = '3.0.0',default-features = false }
-
+polkadex-primitives = { path = "../../primitives", default-features = false }
 
 [dev-dependencies]
 sp-io = {  version = '3.0.0',default-features = false }
@@ -33,5 +33,6 @@ default = ['std']
 std = [
     'codec/std',
     'frame-support/std',
-    'frame-system/std'
+    'frame-system/std',
+    "polkadex-primitives/std"
 ]
