--- a/pallets/Assets/Cargo.toml
+++ b/pallets/Assets/Cargo.toml
@@ -12,17 +12,17 @@ codec = { version = "2.0.0", package = "parity-scale-codec", default-features = 
 hex = { version = "2.1.0", package = "rustc-hex", default-features = false }
 serde = { version = "1.0.101", optional = true }
 
-frame-support = {  version = '3.0.0',default-features = false }
-frame-system = {  version = '3.0.0',default-features = false }
-sp-io = {  version = '3.0.0',default-features = false }
-sp-core = {  version = '3.0.0',default-features = false }
-sp-std = {  version = '3.0.0',default-features = false }
-sp-runtime = {  version = '3.0.0',default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" ,default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
+sp-io = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
+sp-core = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
+sp-std = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
+sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
 polkadex-primitives = { path = "../../primitives", default-features = false }
-frame-benchmarking = {  version = '3.0.0',default-features = false, optional = true }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false, optional = true }
 
 [dev-dependencies]
-sp-keyring = {  version = '3.0.0',default-features = false }
+sp-keyring = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1" ,default-features = false }
 
 [features]
 default = ["std"]
