--- a/pallets/Polkapool/Cargo.toml
+++ b/pallets/Polkapool/Cargo.toml
@@ -17,16 +17,16 @@ version = '2.0.0'
 
 [dependencies]
 
-frame-support = {  version = '3.0.0',default-features = false }
-frame-system = {   version = '3.0.0',default-features = false }
-sp-runtime = {   version = '3.0.0',default-features = false }
-sp-arithmetic = {   version = '3.0.0',default-features = false }
-sp-core = {   version = '3.0.0',default-features = false }
+frame-support = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
+frame-system = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
+sp-runtime = {   git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
+sp-arithmetic = {   git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
+sp-core = {   git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
 polkadex-primitives = { path = "../../primitives", default-features = false }
 assets = { path = "../Assets", version = "0.1.0", default-features = false }
 
 [dev-dependencies]
-sp-io = {  version = '3.0.0',default-features = false }
+sp-io = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false }
 
 
 [features]
