Added test cases

--- a/pallets/Polkadex_Fungible_Assets/Cargo.toml
+++ b/pallets/Polkadex_Fungible_Assets/Cargo.toml
@@ -21,6 +21,7 @@ sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "rococ
 polkadex-primitives = { path = "../../primitives", default-features = false }
 frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1",default-features = false, optional = true }
 orml-tokens = { path = "../../orml/tokens", default-features = false }
+orml-traits = { path = "../../orml/traits", default-features = false }
 
 [dev-dependencies]
 sp-keyring = {  git = "https://github.com/paritytech/substrate", branch = "rococo-v1" ,default-features = false }
