Started working on IDO pallet

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ panic = 'unwind'
 members = [
     'node',
     'pallets/Polkadex_Fungible_Assets',
+    'pallets/Polkadex_Ido',
     'primitives',
     'runtime',
     "orml/vesting",
