Added IDO Pallet and resolved dependecy erros

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -55,6 +55,7 @@ orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module
 polkadex-primitives = { path = "../primitives", default-features = false }
 polkadex-fungible-assets = { path = "../pallets/fungible-assets", version = "0.1.0", default-features = false }
 polkadex-ocex = { path = "../pallets/ocex", default-features = false }
+polkadex-ido = { path = "../pallets/Polkadex_Ido", default-features = false }
 pallet-substratee-registry = {git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry.git", default-features = false}
 
 [build-dependencies]
@@ -95,7 +96,8 @@ std = [
 	"polkadex-fungible-assets/std",
 	"polkadex-ocex/std",
 	"pallet-substratee-registry/std",
-	"pallet-proxy/std"
+	"pallet-proxy/std",
+	"polkadex-ido/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking",
