--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ panic = 'unwind'
 [workspace]
 members = [
     'node',
-    'pallets/ocex',
-    'pallets/fungible-assets',
+    'pallets/*',
     'primitives',
     'runtime',
 ]
