--- a/pallets/Polkadex_Ido/Cargo.toml
+++ b/pallets/Polkadex_Ido/Cargo.toml
@@ -45,5 +45,6 @@ std = [
     "pallet-balances/std",
     "sp-runtime/std",
     "polkadex-primitives/std",
+	'frame-benchmarking/std',
 ]
 runtime-benchmarks = ["frame-benchmarking"]
